1. início de modificações no vertexDefinition 2. início de identação e identificação dos trechos de gramática